# color-analyzer

./: .dockerignore  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.bat  run.sh  vercel.json
.claude/: settings.local.json
backend/: __init__.py  main.py
backend/api/: routes.py
backend/core/: config.py  palettes.py
backend/models/: schemas.py
backend/services/: color_processor.py  face_analyzer.py  season_classifier.py  visualization.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
