[project]
name = "color-analyzer"
version = "1.0.0"
description = "Personal Color Analysis using computer vision and color theory"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "opencv-python-headless>=4.9.0.80",
    "mediapipe==0.10.9",
    "numpy>=1.26.3,<2.0",
    "pillow>=10.2.0",
    "pillow-heif>=0.18.0",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

